--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .vscode
 __pycache__
 venv
-
+projects/02_trivia_api/starter/frontend/node_modules
 # OS generated files #
 ######################
 .DS_Store
